--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h3>Bachelors Degree in History: University of Illinois Urbana-Champaign </h3>
 									<h3>Masters Degree in Linguistics: Northeastern Illinois University</h3>
 									<h3>Masters Degree in Speech-Language Pathology: Saint Xavier University</h3>
-									<p>Leslie Crossan is a licensed and certified speech-language pathologist who has been practicing since 2010.  After working in a private clinic treating children and adults with a variety of communication needs, Leslie opened her own practice to provide specialized treatment and assessment for children with language-based reading disorders.
+									<p>Leslie Crossan is a licensed and certified speech-language pathologist who has been almost ten years of clinical experience with both children and adults.  After working in a private clinic which served a variety of communication needs, Leslie opened her own practice to provide specialized treatment and assessment for children with language-based reading disorders.
 										 </p>
 								</div>
 							</div>
