--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<div class="inner">
 							<h1>Eastside Reading and Language Therapy</h1>
 							<p>Opening in the fall of 2017<br />
-							Evaluating and treating dyslexia and other language-based reading difficulties</p>
+							We specialize in evaluating and treating dyslexia and other language-based reading difficulties</p>
 							<ul class="actions">
 								<li><a href="#About" class="button scrolly">Learn more</a></li>
 							</ul>
