--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 											USA</span>
 										</li>
 										<li>
-											<h3>info@esrlt.com</h3>
-											<a href="#">user@untitled.tld</a>
+											<h3>Email</h3>
+											<a href="#">info@esrlt.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
