change wording per leslie

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#About">Who we are</a></li>
-							<li><a href="#Services">What we do</a></li>
+							<li><a href="#evaluation">Evaluation</a></li>
+						  <li><a href="#Therapy">Therapy</a></li>
 							<li><a href="#Contact">Get in touch</a></li>
 							<li><a href="#forms">Download Forms</a></li>
 						</ul>
@@ -59,18 +60,35 @@
 						</section>
 					</section>
 
-				<!-- Two -->
-					<section id="Services" class="wrapper style3 fade-up">
+				<!-- evaluation -->
+					<section id="evaluation" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
 							<div class="features">
 								<section>
 									<span class="icon major fa-book"></span>
-									<h3>Assessment</h3>
-									<p>Dyslexia is a class of learning disablility which is classified by issues with decoding, spelling and cognition of words. It is a disorder which is nuerobiological
-									in origin and is a results of a deficit in the phonological component of language. Eastside Reading Langaue therpery engages in a multi-sensory word analysis
-									program reading, spelling, and vocabulary. We empower kids to learn by demystifing language strucure, spelling structure and phonoics.</p>
+									<h3>Evaluation</h3>
+									<p>We provide comprehensive reading evaluations that are tailored to your child and will assess his/her strengths and weaknesses in reading.  Information is gathered from formal standardized tests, as well as parent and child interviews, previous evaluations, school work, and report cards.  </p>
+									<br>
+									<p>Our evaluation process is as follows:</p>
+									<ol type=1>
+										<li>A free consultation at which we determine if a reading evaluation is appropriate or if we should refer you to another specialist.  If an evaluation is recommended and desired, we will schedule one as soon as possible.</li>
+										<li>Evaluations vary in length but are generally two to four hours, not including the initial consultation. Testing is often done in two or three sessions depending on your child’s age and needs.   Our goal is to assess your child at his/her best.  By scheduling multiple testing sessions, we are able to get a more complete picture of your child, while also reducing fatigue.</li>
+										<li>Approximately two weeks after testing has completed,a follow-up meeting will be scheduled to discuss the results and recommendations.  If treatment is indicated, an individualized treatment plan will also be provided.  We want to provide you with all the information and tools you need to help your child become successful in reading..</li>
+									</ol>
 								</section>
+							</div>
+							<ul class="actions">
+								<li><a href="#contact" class="button">Contact Us</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Therapy -->
+					<section id="Therapy" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>What we do</h2>
+							<div class="features">
 								<section>
 									<span class="icon major fa-wechat"></span>
 									<h3>Therapy</h3>
