--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<ol type=1>
 										<li>A free consultation at which we determine if a reading evaluation is appropriate or if we should refer you to another specialist.  If an evaluation is recommended and desired, we will schedule one as soon as possible.</li>
 										<li>Evaluations vary in length but are generally two to four hours, not including the initial consultation. Testing is often done in two or three sessions depending on your child’s age and needs.   Our goal is to assess your child at his/her best.  By scheduling multiple testing sessions, we are able to get a more complete picture of your child, while also reducing fatigue.</li>
-										<li>Approximately two weeks after testing has completed,a follow-up meeting will be scheduled to discuss the results and recommendations.  If treatment is indicated, an individualized treatment plan will also be provided.  We want to provide you with all the information and tools you need to help your child become successful in reading..</li>
+										<li>Approximately two weeks after testing has completed,a follow-up meeting will be scheduled to discuss the results and recommendations.  If treatment is indicated, an individualized treatment plan will also be provided.  We want to provide you with all the information and tools you need to help your child become successful in reading.</li>
 									</ol>
 								</section>
 							</div>
