--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
 									<span class="icon major fa-book"></span>
 									<h3>Evaluation</h3>
 									<p>We provide comprehensive reading evaluations that are tailored to your child and will assess his/her strengths and weaknesses in reading.  Information is gathered from formal standardized tests, as well as parent and child interviews, previous evaluations, school work, and report cards.  </p>
-									<br>
 									<p>Our evaluation process is as follows:</p>
 									<ol type=1>
-										<li>A free consultation at which we determine if a reading evaluation is appropriate or if we should refer you to another specialist.  If an evaluation is recommended and desired, we will schedule one as soon as possible.</li>
+										<li>A free consultation at which we determine if a reading evaluation is appropriate or if we should refer you to another specialist.  If an evaluation is recommended and desired, we will schedule one as soon as possible.</li><br>
 										<li>Evaluations vary in length but are generally two to four hours, not including the initial consultation. Testing is often done in two or three sessions depending on your child’s age and needs.   Our goal is to assess your child at his/her best.  By scheduling multiple testing sessions, we are able to get a more complete picture of your child, while also reducing fatigue.</li>
 										<li>Approximately two weeks after testing has completed,a follow-up meeting will be scheduled to discuss the results and recommendations.  If treatment is indicated, an individualized treatment plan will also be provided.  We want to provide you with all the information and tools you need to help your child become successful in reading.</li>
 									</ol>
