--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#About">Who we are</a></li>
-							<li><a href="#evaluation">Evaluation</a></li>
+							<li><a href="#evaluation">Evaluations</a></li>
 						  <li><a href="#Therapy">Therapy</a></li>
 							<li><a href="#Contact">Get in touch</a></li>
 							<li><a href="#forms">Download Forms</a></li>
