--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<div class="features">
 								<section>
 									<span class="icon major fa-book"></span>
-									<h3>Evaluation</h3>
+									<h3>Evaluations</h3>
 									<p>We provide comprehensive reading evaluations that are tailored to your child and will assess his/her strengths and weaknesses in reading.  Information is gathered from formal standardized tests, as well as parent and child interviews, previous evaluations, school work, and report cards.  </p>
 									<p>Our evaluation process is as follows:</p>
 									<ol type=1>
