--- a/index.html
+++ b/index.html
@@ -129,13 +129,14 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>9046 NE 195th St.<br />
+											<span>Eastside Reading & Language Therapy, LLC<br />
+											9046 NE 195th St.<br />
 											Bothell, WA 98011<br />
 											USA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">info@esrlt.com</a>
+											<a href="#">contact@esrlt.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
@@ -144,10 +145,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
@@ -173,7 +171,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Eastside Reading & Language Therapy, LLC. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
