--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<LINK REL="SHORTCUT ICON" HREF="/images/favicon.ico">
-		<title>Eastside Reading and Langauge Therapy</title>
+		<title>Eastside Reading & Language Therapy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -34,7 +34,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Eastside Reading and Language Therapy</h1>
+							<h1>Eastside Reading & Language Therapy</h1>
 							<p>Opening in the fall of 2017<br />
 							We specialize in evaluating and treating dyslexia and other language-based reading difficulties</p>
 							<ul class="actions">
