--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="About" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/Leslie.png" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/headshot.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Leslie Crossan M.A., M.S., CCC-SLP</h2>
