deleted coming in the fall and added period to descrip

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Eastside Reading & Language Therapy</h1>
-							<p>Opening in the fall of 2017<br />
-							We specialize in evaluating and treating dyslexia and other language-based reading difficulties</p>
+							<br />
+							We specialize in evaluating and treating dyslexia and other language-based reading difficulties.</p>
 							<ul class="actions">
 								<li><a href="#About" class="button scrolly">Learn more</a></li>
 							</ul>
