--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1>Eastside Reading & Language Therapy</h1>
 							<br />
-							We specialize in evaluating and treating dyslexia and other language-based reading difficulties.</p>
+							<h2>We specialize in evaluating and treating dyslexia and other language-based reading difficulties.</h2>
 							<ul class="actions">
 								<li><a href="#About" class="button scrolly">Learn more</a></li>
 							</ul>
