--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Eastside Reading & Language Therapy</h1>
+							<h1>Eastside Reading & Language Therapy, LLC</h1>
 							<br />
 							<h2>We specialize in evaluating and treating dyslexia and other language-based reading difficulties.</h2>
 							<ul class="actions">
