--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 									<p>We provide comprehensive reading evaluations that are tailored to your child and will assess his/her strengths and weaknesses in reading.  Information is gathered from formal standardized tests, as well as parent and child interviews, previous evaluations, school work, and report cards.  </p>
 									<p>Our evaluation process is as follows:</p>
 									<ol type=1>
-										<li>A free consultation at which we determine if a reading evaluation is appropriate or if we should refer you to another specialist.  If an evaluation is recommended and desired, we will schedule one as soon as possible.</li><br>
+										<li>A free consultation at which we determine if a reading evaluation is appropriate or if we should refer you to another specialist.  If an evaluation is recommended, and desired, we will schedule one as soon as possible.</li><br>
 										<li>Evaluations vary in length but are generally two to four hours, not including the initial consultation. Testing is often done in two or three sessions depending on your child’s age and needs.   Our goal is to assess your child at his/her best.  By scheduling multiple testing sessions, we are able to get a more complete picture of your child, while also reducing the impact of testing fatigue.</li><br>
 										<li>A follow-up meeting will be scheduled for approximately two weeks after testing has completed. Results and recommendations will be discussed at the follow-up. If treatment is recommended, an individualized treatment plan will also be provided.  We want to provide you with the information and tools so that your child can become a successful reader and student.</li>
 									</ol>
