--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://www.facebook.com/Eastside-Reading-and-Language-Therapy-233608417130822/" class="fa-facebook"><span class="label">Facebook</span></a></li>
+												#<li><a href="https://www.facebook.com/Eastside-Reading-and-Language-Therapy-233608417130822/" class="fa-facebook"><span class="label">Facebook</span></a></li>
 												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
