edit patient  download forms

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
 								<section id="forms" class="wrapper style1 fullscreen fade-up">
 									<div class="inner">
 										<h1>Available on-line forms</h1>
-										<p>Download here<br />
+										<br />
 										<ul class="actions">
-											<li><a href="#forms" class="button scrolly">Learn more</a></li>
+											<li><a href="#forms" class="button scrolly">Patient Intake</a></li>
 										</ul>
 									</div>
 								</section>
