--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 										<h1>Available on-line forms</h1>
 										<br />
 										<ul class="actions">
-											<li><a href="#forms" class="button scrolly">Patient Intake</a></li>
+											<li><a href="/assets/forms/patient-intake.pdf" class="button scrolly">Patient Intake</a></li>
 										</ul>
 									</div>
 								</section>
