added spelling to evaluation description

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<section>
 									<span class="icon major fa-book"></span>
 									<h3>Evaluations</h3>
-									<p>We provide comprehensive reading evaluations that are tailored to your child and will assess his/her strengths and weaknesses in reading.  Information is gathered from formal standardized tests, as well as parent and child interviews, previous evaluations, school work, and report cards.  </p>
+									<p>We provide comprehensive reading evaluations that are tailored to your child and will assess his/her strengths and weaknesses in reading and spelling.  Information is gathered from formal standardized tests, as well as parent and child interviews, previous evaluations, school work, and report cards.  </p>
 									<p>Our evaluation process is as follows:</p>
 									<ol type=1>
 										<li>A free consultation at which we determine if a reading evaluation is appropriate or if we should refer you to another specialist.  If an evaluation is recommended, and desired, we will schedule one as soon as possible.</li><br>
