--- a/index.html
+++ b/index.html
@@ -90,7 +90,29 @@
 								<section>
 									<span class="icon major fa-wechat"></span>
 									<h3>Therapy</h3>
-									<p>After a complete assessment of your child's reading, language, spelling, and writing skills, treatment can begin.  Research has shown that reading instruction for children with dyslexia and other language based reading difficulties need structured, explicit, and individualized instruction. Treatment must also be intensive, which translates to at least two one-hour sessions per week with home practice.</p>
+									<p>After a diagnosis of dyslexia or another reading disability has been made, treatment can begin. </p>
+									<p>Our treatment process is as follows:</p>
+									<ol type=1>
+										<li>An initial consult gives us the opportunity to learn about your child, their history, previous evaluations, and their diagnosis.  After the consult, we will develop a treatment plan together. This includes:</li><br>
+											<li>+ Discussing and selecting the intervention program that is appropriate for your child and your family.  The programs we utilize for reading and spelling intervention are: Wired for ReadingⓇ, Wilson Reading SystemⓇ, and Spell-Links.</li><br>
+											<li>+ Deciding the frequency of intensive therapy for your child.</li><br>
+											<li>+ Establishing expectations and goals for therapy.</li><br>
+										<li> Therapy itself will be structured, explicit, individualized, multisensory, and intensive.  Your child’s progress will be closely monitored so that we can focus on what methods, explanations, and exercises are helpful to them and adjust accordingly.  Throughout therapy the following areas will be addressed, with varying emphasis, depending on your child’s needs: </li><br>
+											<li>Phonological Awareness </li>
+											<li>Phonemic Awareness</li>
+											<li>Alphabet/Letter Knowledge</li>
+											<li> The History of English </li>
+											<li>Sound/Symbol Associations </li>
+											<li>Syllable Shapes </li>
+											<li>Morphology</li>
+											<li>Fluency</li>
+											<li>Syntax</li>
+											<li>Semantics</li>
+											<li>Spelling</li>
+											<li>Reading Comprehension</li>   
+
+
+
 								</section>
 							</div>
 							<ul class="actions">
