updating therapy info

--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
 									<p>Our treatment process is as follows:</p>
 									<ol type=1>
 										<li>An initial consult gives us the opportunity to learn about your child, their history, previous evaluations, and their diagnosis.  After the consult, we will develop a treatment plan together. This includes:</li><br>
-											<li>+ Discussing and selecting the intervention program that is appropriate for your child and your family.  The programs we utilize for reading and spelling intervention are: Wired for ReadingⓇ, Wilson Reading SystemⓇ, and Spell-Links.</li><br>
-											<li>+ Deciding the frequency of intensive therapy for your child.</li><br>
-											<li>+ Establishing expectations and goals for therapy.</li><br>
+											+ Discussing and selecting the intervention program that is appropriate for your child and your family.  The programs we utilize for reading and spelling intervention are: Wired for ReadingⓇ, Wilson Reading SystemⓇ, and Spell-Links.</li><br>
+											+ Deciding the frequency of intensive therapy for your child.<br>
+											+ Establishing expectations and goals for therapy<br>
 										<li> Therapy itself will be structured, explicit, individualized, multisensory, and intensive.  Your child’s progress will be closely monitored so that we can focus on what methods, explanations, and exercises are helpful to them and adjust accordingly.  Throughout therapy the following areas will be addressed, with varying emphasis, depending on your child’s needs: </li><br>
-											<li>Phonological Awareness </li>
-											<li>Phonemic Awareness</li>
-											<li>Alphabet/Letter Knowledge</li>
-											<li> The History of English </li>
-											<li>Sound/Symbol Associations </li>
-											<li>Syllable Shapes </li>
-											<li>Morphology</li>
-											<li>Fluency</li>
-											<li>Syntax</li>
-											<li>Semantics</li>
-											<li>Spelling</li>
-											<li>Reading Comprehension</li>   
+											Phonological Awareness 
+											Phonemic Awareness
+											Alphabet/Letter Knowledge
+											The History of English
+											Sound/Symbol Associations
+											Syllable Shapes 
+											Morphology
+											Fluency
+											Syntax
+											Semantics
+											Spelling
+											Reading Comprehension  
 
 
 
