--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 											+ Discussing and selecting the intervention program that is appropriate for your child and your family.  The programs we utilize for reading and spelling intervention are: Wired for ReadingⓇ, Wilson Reading SystemⓇ, and Spell-Links.</li><br>
 											+ Deciding the frequency of intensive therapy for your child.<br>
 											+ Establishing expectations and goals for therapy<br>
-										<li> Therapy itself will be structured, explicit, individualized, multisensory, and intensive.  Your child’s progress will be closely monitored so that we can focus on what methods, explanations, and exercises are helpful to them and adjust accordingly.  Throughout therapy the following areas will be addressed, with varying emphasis, depending on your child’s needs: </li><br>
+									<br>
+										<li> Therapy itself will be structured, explicit, individualized, multisensory, and intensive.  Your child’s progress will be closely monitored so that we can focus on what methods, explanations, and exercises are helpful to them and adjust accordingly.  Throughout therapy the following areas will be addressed, with varying emphasis: </li><br>
 											+ Phonological Awareness<br>
 											+ Phonemic Awareness<br>
 											+ Alphabet/Letter Knowledge<br>
