--- a/index.html
+++ b/index.html
@@ -99,21 +99,20 @@
 												+ Establishing expectations and goals for therapy<br>
 									<br>
 										<li> Therapy itself will be structured, explicit, individualized, multisensory, and intensive.  Your child’s progress will be closely monitored so that we can focus on what methods, explanations, and exercises are helpful to them and adjust accordingly.  Throughout therapy the following areas will be addressed, with varying emphasis: </li><br>
-												+ Phonological Awareness<br>
-												+ Phonemic Awareness<br>
-												+ Alphabet/Letter Knowledge<br>
-												+ The History of English<br>
-												+ Sound/Symbol Associations<br>
-												+ Syllable Shapes<br>
-												+ Morphology<br>
-												+ Fluency<br>
-												+ Syntax<br>
-												+ Semantics<br>
-												+ Spelling<br>
-												+ Reading Comprehension<br>  
-
-
-
+										<ul style="list-style-type:disc">
+											<li> Phonological Awareness </li>
+											<li> Phonemic Awareness </li>
+											<li> Alphabet/Letter Knowledge </li>
+											<li> The History of English </li>
+											<li> Sound/Symbol Associations </li>
+											<li> Syllable Shapes </li>
+											<li> Morphology </li>
+											<li> Fluency </li>
+											<li> Syntax </li>
+											<li> Semantics </li>
+											<li> Spelling </li>
+											<li> Reading Comprehension </li>
+										</ul> 
 								</section>
 							</div>
 							<ul class="actions">
