--- a/index.html
+++ b/index.html
@@ -93,13 +93,18 @@
 									<p>After a diagnosis of dyslexia or another reading disability has been made, treatment can begin. </p>
 									<p>Our treatment process is as follows:</p>
 									<ol type=1>
-										<li>An initial consult gives us the opportunity to learn about your child, their history, previous evaluations, and their diagnosis.  After the consult, we will develop a treatment plan together. This includes:</li>
-												+ Discussing and selecting the intervention program that is appropriate for your child and your family.  The programs we utilize for reading and spelling intervention are: Wired for ReadingⓇ, Wilson Reading SystemⓇ, and Spell-Links.</li><br>
-												+ Deciding the frequency of intensive therapy for your child.<br>
-												+ Establishing expectations and goals for therapy<br>
+										<li>The initial consult gives us the opportunity to learn about your child, their history, previous evaluations, and their diagnosis.  After the consult, we will develop a treatment plan together. This includes:</li>
+										<ul style="list-style-type:disc">
+											<p>
+											<li> Discussing and selecting the intervention program that is appropriate for your child and your family.  The programs we utilize for reading and spelling intervention are: Wired for ReadingⓇ, Wilson Reading SystemⓇ, and Spell-Links.</li><
+											<li> Deciding the frequency of intensive therapy for your child.</li>
+											<li> Establishing expectations and goals for therapy</li>
+											</p>
+										</ul>
 									<br>
 										<li> Therapy itself will be structured, explicit, individualized, multisensory, and intensive.  Your child’s progress will be closely monitored so that we can focus on what methods, explanations, and exercises are helpful to them and adjust accordingly.  Throughout therapy the following areas will be addressed, with varying emphasis: </li><br>
 										<ul style="list-style-type:disc">
+											<p>
 											<li> Phonological Awareness </li>
 											<li> Phonemic Awareness </li>
 											<li> Alphabet/Letter Knowledge </li>
@@ -112,6 +117,7 @@
 											<li> Semantics </li>
 											<li> Spelling </li>
 											<li> Reading Comprehension </li>
+											</p>
 										</ul> 
 								</section>
 							</div>
