--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 											</p>
 										</ul>
 									<br>
-										<li> Therapy itself will be structured, explicit, individualized, multisensory, and intensive.  Your child’s progress will be closely monitored so that we can focus on what methods, explanations, and exercises are helpful to them and adjust accordingly.  Throughout therapy the following areas will be addressed, with varying emphasis: </li>
+										<li> Therapy itself will be structured, explicit, individualized, multisensory, and intensive.  Your child’s progress will be closely monitored so that we can focus on what methods, explanations, and exercises are helpful to them.  Throughout therapy the following areas will be addressed, with varying emphasis: </li>
 										<ul style="list-style-type:disc">
 											<p>
 											<li> Phonological Awareness </li>
