udpdated treatment language

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 											<li> Establishing expectations and goals for therapy</li>
 											</p>
 										</ul>
-										<li> Therapy itself will be structured, explicit, individualized, multisensory, and intensive.  Your child’s progress will be closely monitored so that we can focus on what methods, explanations, and exercises are helpful to them.  Throughout therapy the following areas will be addressed, with varying emphasis: </li>
+										<li> Therapy itself will be structured, explicit, individualized, multisensory, and intensive.  Your child’s progress will be closely monitored so we can focus on the methods, explanations, and exercises that are most helpful to them.  Throughout therapy the following areas will be addressed, with varying emphasis: </li>
 										<ul style="list-style-type:disc">
 											<p>
 											<li> Phonological Awareness </li>
