--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 										<li>The initial consult gives us the opportunity to learn about your child, their history, previous evaluations, and their diagnosis.  After the consult, we will develop a treatment plan together. This includes:</li>
 										<ul style="list-style-type:disc">
 											<p>
-											<li> Discussing and selecting the intervention program that is appropriate for your child and your family.  The programs we utilize for reading and spelling intervention are: Wired for ReadingⓇ, Wilson Reading SystemⓇ, and Spell-Links.</li>
+											<li> Discussing and selecting the intervention program that is appropriate for your child and your family.  The programs we utilize for reading and spelling intervention are: <a href="http://wiredforreading.com/">Wired for ReadingⓇ</a>, <a href="http://www.wilsonlanguage.com/programs/wilson-reading-system/"> Wilson Reading SystemⓇ<a/>, and <a href="http://www.learningbydesign.com/">Spell-Links</a>.</li>
 											<li> Deciding the frequency of intensive therapy for your child.</li>
 											<li> Establishing expectations and goals for therapy</li>
 											</p>
