update title description

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="inner">
 							<h1>Eastside Reading & Language Therapy, LLC</h1>
 							<br />
-							<h3>We specialize in evaluating and treating dyslexia and other language-based reading difficulties.</h3>
+							<h3>Specializing in evaluating and treating dyslexia and other language-based reading difficulties.</h3>
 							<br /><ul class="actions">
 								<li><a href="#About" class="button scrolly">Learn more</a></li>
 							</ul>
