fix contact form

--- a/index.html
+++ b/index.html
@@ -137,12 +137,20 @@
 								<section>
 										<form method="post" action="http://esrlt.com/php/contact.php">
 										<div class="field half first">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" required aria-describedby="name-format" aria-required=”true” pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="Firstname Lastname">
+											<label for="first-Name">First Name</label>
+											<input type="text" name="first-name" id="first-name" required aria-describedby="name-format" aria-required=”true” pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="first-name">
+										</div>
+										<div class="field half first">
+											<label for="last-name">Last Name</label>
+											<input type="text" name="last-name" id="last-name" required aria-describedby="name-format" aria-required=”true” pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="last-name">
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
 											<input type="email" name="email" id="email" required/>
+										</div>
+										<div class="field half">
+											<label for="phone">Phone Number</label>
+											<input type="phone" name="phone" id="phone"/>
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
