--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 											<label for="email">Email</label>
 											<input type="email" name="email" id="email" required/>
 										</div>
-										<div class="field half">
+										<div class="field phone">
 											<label for="phone">Phone Number</label>
 											<input type="phone" name="phone" id="phone"/>
 										</div>
