--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<p></p>
 							<div class="split style1">
 								<section>
-										<form method="post" action="http://esrlt.com/php/contact.php">
+										<form method="post" action="https://esrlt.com/php/contact.php">
 										<div class="field half first">
 											<label for="first-Name">First Name</label>
 											<input type="text" name="first-name" id="first-name" required aria-describedby="name-format" aria-required=”true” pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" title="first-name">
@@ -146,11 +146,11 @@
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="email" name="email" id="email" required/>
+											<input type="text" name="email" id="email" required/>
 										</div>
 										<div class="field phone">
 											<label for="phone">Phone Number</label>
-											<input type="phone" name="phone" id="phone"/>
+											<input type="text" name="phone" id="phone"/>
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
